--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,6 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+index:
+    path:           /{_locale}
+    controller:     App\Controller\DefaultController::index
+    locale:         da
+    requirements:
+        _locale:    da|en|no|la
