--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: 'da'
+    locale: da
     # This parameter defines the codes of the locales (languages) enabled in the application
     app_locales: da|en|no|la
     app.supported_locales: ['da', 'en', 'no', 'la']
