--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,7 +7,7 @@ parameters:
     locale: da
     # This parameter defines the codes of the locales (languages) enabled in the application
     app_locales: da|en|no|la
-    app.supported_locales: ['da', 'en', 'no', 'la']
+    app.supported_locales: ['da', 'en', 'no', 'se', 'la']
 
 
 services:
