--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,8 +6,8 @@
 parameters:
     locale: da
     # This parameter defines the codes of the locales (languages) enabled in the application
-    app_locales: da|en|no|la
-    app.supported_locales: ['da', 'en', 'no', 'se', 'la']
+    app_locales: da|en|no|sv|la
+    app.supported_locales: ['da', 'en', 'no', 'sv', 'la']
 
 
 services:
