Opdatering til PHP 8.2 / Symfony 6.3 - delvis

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,7 @@
 security:
-    encoders:
-        App\Entity\User:
-            algorithm: auto
+    #encoders:
+    #    App\Entity\User:
+    #        algorithm: auto
 
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
@@ -15,10 +15,11 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: true
-            guard:
-                authenticators:
-                    - App\Security\LoginFormAuthenticator
+            lazy: true
+            # anonymous: true
+            # guard:
+            #    authenticators:
+            #        - App\Security\LoginFormAuthenticator
             logout:
                 path: app_logout
                 # where to redirect after logout
