--- a/.env
+++ b/.env
@@ -26,3 +26,14 @@ APP_SECRET=5386bbc536529f5ff70376e3485a30a6
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 # DATABASE_URL=mysql://user:password@127.0.0.1:3306/database
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
+
+###> symfony/mailer ###
+# MAILER_DSN=null://null
+###< symfony/mailer ###
