--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,6 +1,8 @@
-index:
-    path:           /{_locale}
-    controller:     App\Controller\DefaultController::index
-    locale:         da
+controllers:
+    resource:
+        path: ../src/Controller/
+        namespace: App\Controller
+    type: attribute
+    prefix: /{_locale}
     requirements:
-        _locale:    da|en|no|sv|la
+        _locale: '%app_locales%'
