--- a/config/routes/attributes.yaml
+++ b/config/routes/attributes.yaml
@@ -1,5 +1,6 @@
+# config/routes/attributes.yaml
 controllers:
-    resource: 
+    resource:
         path: ../../src/Controller/
         namespace: App\Controller
     type: attribute
@@ -8,6 +9,7 @@ controllers:
         _locale: '%app_locales%'
     defaults:
         _locale: '%locale%'
+
 
 kernel:
     resource: App\Kernel
