--- a/config/services.yaml
+++ b/config/services.yaml
@@ -2,34 +2,43 @@
 # Files in the packages/ subdirectory configure your dependencies.
 
 # Put parameters here that don't need to change on each machine where the app is deployed
-# https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
+# https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     locale: da
     # This parameter defines the codes of the locales (languages) enabled in the application
     app_locales: da|en|no|sv|la
     app.supported_locales: ['da', 'en', 'no', 'sv', 'la']
 
+twig:
+    globals:
+        author: "Michael Lindhardt Rasmussen"
+        product: "Bauers"
+        version: "Version: 2.0.1 alpha"
+        description: "Kalenderværktøj til slægtsforskere, og andet godtfolk der arbejder med de gamle kirkebøger"
+        copyright: "© 2020-22 Filicis Software - Michael Lindhardt Rasmussen"
 
+        app_btn_class:      btn btn-outline-dark btn-light shadow-lg m-auto
+        app_btn_class_sm:   btn btn-outline-dark btn-light btn-sm shadow-lg m-auto
+
+               
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         bind:
-            $locales: '%app_locales%'
-            $defaultLocale: '%locale%'
+#            $locales: '%app_locales%'
+#            $defaultLocale: '%locale%'
+
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
-        resource: '../src/*'
-        exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
-
-    # controllers are imported separately to make sure services can be injected
-    # as action arguments even if you don't extend any base controller class
-    App\Controller\:
-        resource: '../src/Controller'
-        tags: ['controller.service_arguments']
+        resource: '../src/'
+        exclude:
+            - '../src/DependencyInjection/'
+            - '../src/Entity/'
+            - '../src/Kernel.php'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
