--- a/config/services.yaml
+++ b/config/services.yaml
@@ -9,15 +9,27 @@ parameters:
     app_locales: da|en|no|sv|la
     app.supported_locales: ['da', 'en', 'no', 'sv', 'la']
 
+twig:
+    globals:
+        author: "Michael Lindhardt Rasmussen"
+        product: "Bauers"
+        version: "Version: 2.0.1 alpha"
+        description: "Kalenderværktøj til slægtsforskere, og andet godtfolk der arbejder med de gamle kirkebøger"
+        copyright: "© 2020-22 Filicis Software - Michael Lindhardt Rasmussen"
 
+        app_btn_class:      btn btn-outline-dark btn-light shadow-lg m-auto
+        app_btn_class_sm:   btn btn-outline-dark btn-light btn-sm shadow-lg m-auto
+
+               
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
         bind:
-            $locales: '%app_locales%'
-            $defaultLocale: '%locale%'
+#            $locales: '%app_locales%'
+#            $defaultLocale: '%locale%'
+
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
