--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -6,3 +6,13 @@ controllers:
     prefix: /{_locale}
     requirements:
         _locale: '%app_locales%'
+
+# Omdirigerer til /{_locale}/
+#
+index:
+    path: /
+    controller: Symfony\Bundle\FrameworkBundle\Controller\RedirectController
+    defaults:
+        route: 'app_default'
+        permanent: true
+
